# BIC_MRI_pipeline_util

./: README.md  pyproject.toml
src/bic_util/: acl.py  bids.py  cmp.py  config.py  dicom.py  file_lock.py  format.py  fs.py  json.py  print.py  ssh.py  util.py
