[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bic_util"
version = "0.0.0"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "paramiko",
    "pydicom",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bic_util"]

[tool.pyright]
include = ["src"]
strict = ["src"]

[tool.ruff]
include = ["src/**/*.py"]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = ["E203", "E221", "E241", "E251"]
select = ["E", "F", "I", "N", "UP", "W"]
